<resources>
    <string name="app_name">Text Input Comparison</string>
    <string name="main_title_text">Text Input Comparison Test</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>

    <string name="main_instructions_text">Welcome to our text input comparison test. You will be shown three sets of five phrases, and you will be expected to enter back the same phrases using the given input method.</string>
    <string name="note_instructions_text"><i>Note that if you have haptic feedback (vibration) already turned on for your keyboard of choice, please go to Settings -> Vibration to turn it off.</i></string>
    <string name="main_start_button_text">Start Comparison Test</string>
    <string name="main_settings_button_text">Settings</string>
    <string name="main_test_result_button_text">Results Template</string>

    <string name="test_next_phase_warning_text">Moving to next phase, please press ok when ready.</string>
    <string name="test_next_phase_warning_text_haptic_off">Moving to next phase, please press ok when ready. As a reminder, if your phone\'s haptic feedback settings are turned on, please go to settings > vibration to turn if off. </string>
    <string name="test_next_phase_warning_text_haptic_on">"Moving to next phase, please press ok when ready. If your phone\'s haptic feedback settings are turned off, please go to settings > vibration to turn if on."</string>
    <string name="test_record_button_start_text">Record</string>
    <string name="test_record_button_stop_text">Stop</string>
    <string name="test_recording_in_progress_text">Listening...</string>

    <string name="results_title_text">Results</string>
    <string name="results_typing_speed_text">Typing Speed:</string>
    <string name="results_accuracy_text">Accuracy:</string>
    <string name="results_fastest_method_text">Fastest Method</string>
    <string name="results_most_accurate_method_text">Most Accurate Method</string>
    <string name="results_haptic_feedback_yes_title_text">With Haptic Feedback</string>
    <string name="results_haptic_feedback_no_title_text">Without Haptic Feedback</string>
    <string name="results_voice_detection_title_text">Voice Detection</string>
    <string name="results_summary_title_text">Summary</string>

    <string name="example_text"><i>Insert Text Here</i></string>
</resources>