<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/main_page_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff234567"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/main_title_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/example_text" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:onClick="clickOK"
            android:text="@string/ok_button_text" />

        <Button
            android:id="@+id/cancel_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:onClick="clickCancel"
            android:text="@string/cancel_button_text" />

    </LinearLayout>

    </LinearLayout>
